--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/tienda
+spring.datasource.url=jdbc:mysql://localhost:3306/shop
 spring.datasource.username=root
-spring.datasource.password=RaySoaint1
+spring.datasource.password=[el que corresponda]
 
 spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
 #spring.jpa.database-platform=org.hibernate.dialect.MariaDB53Dialect
